1999-04-24  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* FCall.m ([FCall_c -performCall]): Move double return to float
	on i386.

1999-04-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m: Include directory.h.
	(defobj_init_java_call_tables): Add static and non-statci jstring
	entries.
	([FCall_c -getRetVal:buf:]): Handle jobject and jstring
	return conversions (for use with -forward::).

	* FArguments.m (ffi_types): Add ffi_type_pointer for
	fcall_type_jstring.
	(java_type_signature): Add Ljava/lang/String; for jstring.
	(objc_types): Add placeholder for jstring.
	([FArguments_c -_addArgument_:ofType:]): Convert fcall_type_string
	to fcall_type_jstring in when javaFlag is set.
	([FArguments_c -_setReturnType_:]): Likewise.  Set result to
	`object' slot, like jobject.

	* FArguments.h (FCALL_TYPE_COUNT): Increment.
	(fcall_type_t): Add fcall_type_jstring.

1999-04-23  Alex Lancaster  <alex@santafe.edu>

	* internal.h: #import collections.h for OutputStream protocol.
	
	* internal.[hm] (lisp_process_array, lisp_output_type): Moved from
	DefObject.m.  Declare as extern, make non-static.

	* DefObject.m (lisp_process_array, lisp_output_type): Removed
	functions.

1999-04-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FArguments.m ([FArguments_c -createEnd]): Call super createEnd.

	* defobj.h: Clarify docs on addRef:withArgument:.
	(Zone): Switch return type of getPageSize from int to size_t.
	(FArguments): Add using phase tag before getResult.

1999-04-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* DefObject.m ([Object_s -lispIn:]): If function name is
	`parse', don't raise an exception.  This is to allow for
	compact custom -lispIn: routines.

	* defobj.h (MAKE_PARSE_FUNCTION_NAME): New macro.

	* FArguments.m ([FArguments_c -mapAllocations:]): Protect use
	of jstring.

	* defobj.m (_defobj_implement): Set FArguments implemented type.

	* Makefile.am (JAVAINCLUDES): New variable.
	(INCLUDES): use it.
